added directional cosines to navtree
added directional cosines subsubsection to navtree

--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -31,7 +31,11 @@ import Warning from "../../components/Warning.astro"
         </ul>
     </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#unit_vectors'>Unit Vectors</a></li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_magnitude_and_direction'>Vector Magnitude and Direction</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_magnitude_and_direction'>Vector Magnitude and Direction</a>
+      <ul class='list-group list-group-flush py-0'>
+        <li class = 'list-group-item py-0'><a class = 'text-decoration-none subsubsection' href = '#directional_cosines'>Directional cosines</a></li>
+      </ul>
+    </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalar_and_vector_products'>Scalar and Vector Products</a>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#dot_product'>Dot Product</a>
