layout title sentencing case
Puts all layout titles that appear in browser tabs in sentencing tense in all pages

--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -13,7 +13,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
 
-<Layout title="Cartesian Coordinates">
+<Layout title="Cartesian coordinates">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
