--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -9,7 +9,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 import Warning from "../../components/Warning.astro"
 import Example from "../../components/Example.astro"
 ---
-<Layout title="Hydrostatic Fluid Pressure">
+<Layout title="Hydrostatic fluid pressure">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
