--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -8,7 +8,7 @@ import SubSubSection from "../../components/SubSubSection.astro"
 import Enumerate from "../../components/Enumerate.astro"
 import Item from "../../components/Item.astro"
 ---
-<Layout title="Reaction Forces">
+<Layout title="Reaction forces">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
