--- a/src/pages/sta/shear_moment_diagrams.astro
+++ b/src/pages/sta/shear_moment_diagrams.astro
@@ -16,7 +16,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 ---
 <!-- Suggestion for a real world example -->
-<Layout title="Shear Force & Bending Moment Diagrams">
+<Layout title="Shear force & bending moment diagrams">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
