--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -21,7 +21,7 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
-<Layout title="Center of Mass">
+<Layout title="Center of mass">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
