--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -14,7 +14,7 @@ import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 import Example from "../../components/Example.astro"
 ---
-<Layout title="Frames and Machines">
+<Layout title="Frames and machines">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
