--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -13,7 +13,7 @@ import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 ---
 
-<Layout title="Moment of Inertia">
+<Layout title="Moment of inertia">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
