--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -14,7 +14,7 @@ import Center from "../../components/Center.astro"
 import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
 import Warning from "../../components/Warning.astro"
 ---
-<Layout title="Vectors and Scalars">
+<Layout title="Vectors and scalars">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
