--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -3,38 +3,208 @@ import Layout from "../layouts/CourseMenuLayout.astro"
 import Section from "../components/Section.astro"
 import SubSection from "../components/SubSection.astro"
 import Image from "../components/Image.astro"
+import SimplifiedView from "../components/course_menus/SimplifiedView.astro"
+import CourseCard from "../components/course_menus/CourseCard.astro"
 
 import "../../public/static/css/course_home_pages.css"
 ---
 
-<Layout title="Statics">
-  <h1>
-    <strong>Statics</strong>
-  </h1>
-  <section class="mt-sm-4 mt-2">
-    <ol>
-      <li><a href="/sta/introduction?origin=coursemenu">Introduction</a></li>
-      <li><a href="/sta/cartesian_coordinates?origin=coursemenu">Cartesian coordinates</a></li>
-      <li><a href="/sta/vectors_scalars?origin=coursemenu">Vectors and scalars</a></li>
-      <li><a href="/sta/free_body_diagrams?origin=coursemenu">Free body diagrams</a></li>
-      <li><a href="/sta/moments?origin=coursemenu">Moments</a></li>
-      <li><a href="/sta/force_systems?origin=coursemenu">Force systems</a></li>
-      <li><a href="/sta/reaction_forces?origin=coursemenu">Reaction forces</a></li>
-      <li><a href="/sta/trusses?origin=coursemenu">Trusses</a></li>
-      <li><a href="/sta/frames_and_machines?origin=coursemenu">Frames and machines</a></li>
-      <li><a href="/sta/shear_moment_diagrams?origin=coursemenu">Internal forces</a></li>
-      <li><a href="/sta/friction?origin=coursemenu">Friction</a></li>
-      <li><a href="/sta/centers_of_mass?origin=coursemenu">Center of mass</a></li>
-      <li><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic fluid pressure</a></li>
-      <li><a href="/sta/moment_of_inertia?origin=coursemenu">Moment of inertia</a></li>
-      <li><a href="/sta/virtual_work?origin=coursemenu">Virtual work</a></li>
-    </ol>
-  </section>
-  <section class="mt-sm-4 mt-2">
-    <h3 class="fw-bold w-100">Helpful links:</h3>
-    <ul>
-      <li><a href="/sta/pltips">PrairieLearn tips</a></li>
+    <Layout title="Statics">
+        <div class="mt-sm-4 mt-2 row">
+            <div class="col-md-12 col-12">
+                <SimplifiedView id="here" title="Statics" title_style="h1 fw-bold" style="enumerate">
+                    
+        <CourseCard href="/sta/pltips" img_src="/sta/pltips/src" title="Pltips">
+            <ul class='list-group list-group-flush py-0'> 
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/pltips#inputs'>Inputting answers</a></li> 
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/pltips#quizzes'>Reviewing for quizzes</a></li>
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/pltips#cbtf'>The CBTF</a>
+            <ul class='list-group list-group-flush py-0'> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/pltips#cbtf-policies'>CBTF policies</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/pltips#computation'>Computation at CBTF</a></li> 
+            </ul>
+        </li>
     </ul>
-  </section>
-</div>
-</Layout>
+        </CourseCard>
+        
+        <CourseCard href="/sta/cartesian_coordinates" img_src="/sta/cartesian_coordinates/src" title="Cartesian coordinates">
+            <ul class='list-group list-group-flush py-0'> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/cartesian_coordinates#vector_bases'>Vector Bases</a></li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/cartesian_coordinates#right_hand_rule'>Right Hand Rule</a></li>
+</ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/free_body_diagrams" img_src="/sta/free_body_diagrams/src" title="Free body diagrams">
+            <ul class='list-group list-group-flush py-0'> 
+      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/free_body_diagrams#pulley_idealizations'>Pulley Idealizations</a></li> 
+      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/free_body_diagrams#spring_idealizations'>Spring Idealizations</a></li>
+      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/free_body_diagrams#smooth_surface_idealizations'>Smooth Surface Idealizations</a></li>
+  </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/introduction" img_src="/sta/introduction/src" title="Introduction">
+            <ul class='list-group list-group-flush py-0'> 
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/introduction#newtons_laws'>Newton's laws</a>
+            <ul class='list-group list-group-flush py-0'> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/introduction#newtons_mass_and_energy_balances'>Newton's First Law</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/introduction#newtons_second_law'>Newton's Second Law</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/introduction#newtons_third_law'>Newton's Third Law</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/introduction#example'>Example</a></li> 
+            </ul>
+        </li> 
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/introduction#idealizations'>Idealizations</a>
+            <ul class='list-group list-group-flush py-0'> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/introduction#particles'>Particles</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/introduction#rigid_bodies'>Rigid Bodies</a></li> 
+            </ul>
+        </li>
+    </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/moment_of_inertia" img_src="/sta/moment_of_inertia/src" title="Moment of inertia">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/moment_of_inertia#second_moment'>Moment of Inertia (Second Moment of Area)</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/moment_of_inertia#parallel_axis_theorem'>Parallel axis theorem</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/moment_of_inertia#combining_moments'>Combining moments of inertia</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/moment_of_inertia#typical_shapes'>Moment of inertia for typical shapes</a></li>
+
+        </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/reaction_forces" img_src="/sta/reaction_forces/src" title="Reaction forces">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/reaction_forces#types_of_connections'>Types of Connections</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/reaction_forces#system_classifications'>System Classifications</a></li>
+		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/reaction_forces#redundant_constraints'>Redundant Constraints</a></li>
+		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/reaction_forces#proper_improper_constraints'>Proper and Improper Constraints</a></li>
+		<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/reaction_forces#stability_instability'>Stability and Instability</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/vectors_scalars" img_src="/sta/vectors_scalars/src" title="Vectors scalars">
+            <ul class='list-group list-group-flush py-0'> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/vectors_scalars#scalars_vs_vectors'>Scalars vs. Vectors</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/vectors_scalars#vectors'>Vectors</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/vectors_scalars#scalars'>Scalars</a></li> 
+        </ul>
+    </li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/vectors_scalars#vector_operations'>Vector Operations</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/vectors_scalars#scaling_vectors'>Scaling Vectors</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/vectors_scalars#vector_addition_and_subtraction'>Vector Addition and Subtraction</a></li> 
+        </ul>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/vectors_scalars#unit_vectors'>Unit Vectors</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/vectors_scalars#vector_magnitude_and_direction'>Vector Magnitude and Direction</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/vectors_scalars#scalar_and_vector_products'>Scalar and Vector Products</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/vectors_scalars#dot_product'>Dot Product</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='/sta/vectors_scalars#dot_product_identities'>Dot Product Identities</a>
+                    </li> 
+                </ul>
+            </li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/vectors_scalars#cross_product'>Cross Product</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='/sta/vectors_scalars#cross_product_identities'>Cross Product Identities</a>
+                    </li> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='/sta/vectors_scalars#calculating_the_cross_product'>Calculating the Cross Product</a>
+                    </li> 
+                </ul>
+            </li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/vectors_scalars#vector_projection'>Vector Projection</a>
+            </li> 
+        </ul>
+    </li>
+</ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/virtual_work" img_src="/sta/virtual_work/src" title="Virtual work">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/virtual_work#virtual_displacements'>Virtual Displacements</a><ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/virtual_work#couple_moments'>Couple Moments</a></li> 
+        </ul>
+    </li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/virtual_work#principle_virtual_work'>Principle of Virtual Work</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/virtual_work#virtual_work_analysis'>Virtual Work Analysis</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/moments" img_src="/sta/moments/src" title="Moments">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/moments#moments_as_scalars'>Moments as scalars</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/moments#moments_as_vectors'>Moments as vectors</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/moments#couple_moment'>Couple moment</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/shear_moment_diagrams" img_src="/sta/shear_moment_diagrams/src" title="Shear moment diagrams">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/shear_moment_diagrams#sign_conventions'>Sign Conventions</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/shear_moment_diagrams#general_procedure'>General Procedure</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/shear_moment_diagrams#general_rules'>General Rules</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/trusses" img_src="/sta/trusses/src" title="Trusses">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/trusses#assumptions'>Truss Assumptions</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/trusses#two_force_member'>Two Force Member</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/trusses#zero_force_member'>Zero Force Member</a></li>
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/trusses#joints'>Truss Analysis: Joints</a></li>
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/trusses#sections'>Truss Analysis: Sections</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/centers_of_mass" img_src="/sta/centers_of_mass/src" title="Centers of mass">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/centers_of_mass#centroid'>Centroid</a></li> 
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/centers_of_mass#basic_shapes'>Centroids of Basic Shapes</a></li>
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/centers_of_mass#composite_shapes'>Finding Centroids Using Composite Shapes</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/force_systems" img_src="/sta/force_systems/src" title="Force systems">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/force_systems#equivalent_systems'>Equivalent systems</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/force_systems#concentrated_forces'>Concentrated forces</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/force_systems#distributed_loads'>Distributed loads</a></li>
+          <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/force_systems#rectangular_loading'>Rectangular loading</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/force_systems#triangular_loading'>Triangular loading</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='/sta/force_systems#nonuniform_distributed_loads'>Nonuniform distributed loads</a></li>
+        </ul>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/frames_and_machines" img_src="/sta/frames_and_machines/src" title="Frames and machines">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/frames_and_machines#assumptions'>Frames</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/frames_and_machines#two_force_member'>Machines</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/frames_and_machines#zero_force_member'>Frame and Machine Analysis</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/friction" img_src="/sta/friction/src" title="Friction">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/friction#static_friction'>Static Friction</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/friction#tip_slip'>Tipping vs. Slipping</a></li>
+      </ul>
+        </CourseCard>
+        
+        <CourseCard href="/sta/hydrostatic_fluid_pressure" img_src="/sta/hydrostatic_fluid_pressure/src" title="Hydrostatic fluid pressure">
+            <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/hydrostatic_fluid_pressure#fluid_pressure'>Fluid Pressure</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/sta/hydrostatic_fluid_pressure#buoyancy'>Buoyancy</a></li>
+      </ul>
+        </CourseCard>
+        
+                    <li slot="list"><a href="/sta/pltips?origin=coursemenu">Pltips</a></li><li slot="list"><a href="/sta/cartesian_coordinates?origin=coursemenu">Cartesian coordinates</a></li><li slot="list"><a href="/sta/free_body_diagrams?origin=coursemenu">Free body diagrams</a></li><li slot="list"><a href="/sta/introduction?origin=coursemenu">Introduction</a></li><li slot="list"><a href="/sta/moment_of_inertia?origin=coursemenu">Moment of inertia</a></li><li slot="list"><a href="/sta/reaction_forces?origin=coursemenu">Reaction forces</a></li><li slot="list"><a href="/sta/vectors_scalars?origin=coursemenu">Vectors scalars</a></li><li slot="list"><a href="/sta/virtual_work?origin=coursemenu">Virtual work</a></li><li slot="list"><a href="/sta/moments?origin=coursemenu">Moments</a></li><li slot="list"><a href="/sta/shear_moment_diagrams?origin=coursemenu">Shear moment diagrams</a></li><li slot="list"><a href="/sta/trusses?origin=coursemenu">Trusses</a></li><li slot="list"><a href="/sta/centers_of_mass?origin=coursemenu">Centers of mass</a></li><li slot="list"><a href="/sta/force_systems?origin=coursemenu">Force systems</a></li><li slot="list"><a href="/sta/frames_and_machines?origin=coursemenu">Frames and machines</a></li><li slot="list"><a href="/sta/friction?origin=coursemenu">Friction</a></li><li slot="list"><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic fluid pressure</a></li>
+                </SimplifiedView>
+            </div>
+            <div class="col-md-0 col-0">
+            </div>
+        </div>    
+    </Layout>
+    
