--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -13,18 +13,8 @@ import "../../public/static/css/course_home_pages.css"
         <div class="mt-sm-4 mt-2 row">
             <div class="col-md-12 col-12">
                 <SimplifiedView id="here" title="Mechanism design" title_style="h1 fw-bold" style="enumerate">
-                    
-        <CourseCard href="/md/Cams" img_src="/md/Cams/src" title="Cams">
-            <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Cam_intro'>Cams  Intro</a>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Motion_programing'> Motion Programing</a>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Cam_profiles'>Cam Profiles</a>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Profile_selection'>Cam Profile Selection</a>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Function_transformation'>Function Transformation</a>
-        </ul>
-        </CourseCard>
         
-        <CourseCard href="/md/Graphical_Linkage_Synthesis" img_src="/md/Graphical_Linkage_Synthesis/src" title="Graphical linkage synthesis">
+        <CourseCard href="/md/Graphical_Linkage_Synthesis" img_src="/md/home_page/gls.png" title="Graphical linkage synthesis">
             <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Graphical_Linkage_Synthesis#GLS'>Graphical Linkage Synthesis Intro</a>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Graphical_Linkage_Synthesis#Path_generation'>Path Generation</a>
@@ -41,7 +31,7 @@ import "../../public/static/css/course_home_pages.css"
         </ul>
         </CourseCard>
         
-        <CourseCard href="/md/Instant_Centers" img_src="/md/Instant_Centers/src" title="Instant centers">
+        <CourseCard href="/md/Instant_Centers" img_src="/md/home_page/ic.png" title="Instant centers">
             <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Instant_Centers#IC_intro'>Instant Centers Intro</a>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Instant_Centers#Finding_IC'>Finding Instant Centers</a>
@@ -56,25 +46,18 @@ import "../../public/static/css/course_home_pages.css"
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Instant_Centers#Using_IC'>Using Instant Centers</a>
         </ul>
         </CourseCard>
-        
-        <CourseCard href="/md/Dynamic_Force_Analysis" img_src="/md/Dynamic_Force_Analysis/src" title="Dynamic force analysis">
-            <ul class='list-group list-group-flush py-0'>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#DFA_intro'>Dynamic Force Analysis Intro</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#Dynamics_review'> Review of Dynamics Concepts</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#DFA_procedure'>DFA Procedure</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#DFA_Walkthrough'>DFA Walkthrough</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#Application_Notes'>Application Notes</a></li>
+
+        <CourseCard href="/md/Cams" img_src="/md/home_page/cams.png" title="Cams">
+            <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Cam_intro'>Cams  Intro</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Motion_programing'> Motion Programing</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Cam_profiles'>Cam Profiles</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Profile_selection'>Cam Profile Selection</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Function_transformation'>Function Transformation</a>
         </ul>
         </CourseCard>
-        
-        <CourseCard href="/md/Virtual_Work" img_src="/md/Virtual_Work/src" title="Virtual work">
-            <ul class='list-group list-group-flush py-0'>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Virtual_Work#VW_intro'>Virtual Work Intro</a></li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Virtual_Work#VW_Theory'> Theory of Virtual Work</a></li>
-        </ul>
-        </CourseCard>
-        
-        <CourseCard href="/md/Position_Velocity_Acceleration" img_src="/md/Position_Velocity_Acceleration/src" title="Position velocity acceleration">
+
+        <CourseCard href="/md/Position_Velocity_Acceleration" img_src="/md/home_page/pva.png" title="Position velocity acceleration">
             <ul class='list-group list-group-flush py-0'>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Position_Velocity_Acceleration#PVA_Intro'>PVA Intro</a>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Position_Velocity_Acceleration#Vector_calculus'>Vector Calculus</a>
@@ -86,7 +69,26 @@ import "../../public/static/css/course_home_pages.css"
         </ul>
         </CourseCard>
         
-        <CourseCard href="/md/Balancing" img_src="/md/Balancing/src" title="Balancing">
+        <CourseCard href="/md/Dynamic_Force_Analysis" img_src="/md/home_page/dfa.png" title="Dynamic force analysis">
+            <ul class='list-group list-group-flush py-0'>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#DFA_intro'>Dynamic Force Analysis Intro</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#Dynamics_review'> Review of Dynamics Concepts</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#DFA_procedure'>DFA Procedure</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#DFA_Walkthrough'>DFA Walkthrough</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Dynamic_Force_Analysis#Application_Notes'>Application Notes</a></li>
+        </ul>
+        </CourseCard>
+        
+        <CourseCard href="/md/Virtual_Work" img_src="/md/home_page/vw.png" title="Virtual work">
+            <ul class='list-group list-group-flush py-0'>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Virtual_Work#VW_intro'>Virtual Work Intro</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Virtual_Work#VW_Theory'> Theory of Virtual Work</a></li>
+        </ul>
+        </CourseCard>
+        
+        
+        
+        <CourseCard href="/md/Balancing" img_src="/md/home_page/balancing.png" title="Balancing">
             <ul class='list-group list-group-flush py-0'>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Balancing#Balancing_intro'>Balancing Intro</a></li>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Balancing#Single_plane' >Single Plane Balance</a></li>
