fixed order in mf simp list

--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -96,7 +96,13 @@ import "../../public/static/css/course_home_pages.css"
         </ul>
         </CourseCard>
         
-                    <li slot="list"><a href="/md/Cams?origin=coursemenu">Cams</a></li><li slot="list"><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical linkage synthesis</a></li><li slot="list"><a href="/md/Instant_Centers?origin=coursemenu">Instant centers</a></li><li slot="list"><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic force analysis</a></li><li slot="list"><a href="/md/Virtual_Work?origin=coursemenu">Virtual work</a></li><li slot="list"><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position velocity acceleration</a></li><li slot="list"><a href="/md/Balancing?origin=coursemenu">Balancing</a></li>
+                    <li slot="list"><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical linkage synthesis</a></li>
+                    <li slot="list"><a href="/md/Instant_Centers?origin=coursemenu">Instant centers</a></li>
+                    <li slot="list"><a href="/md/Cams?origin=coursemenu">Cams</a></li>
+                    <li slot="list"><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position velocity acceleration</a></li>
+                    <li slot="list"><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic force analysis</a></li>
+                    <li slot="list"><a href="/md/Virtual_Work?origin=coursemenu">Virtual work</a></li>
+                    <li slot="list"><a href="/md/Balancing?origin=coursemenu">Balancing</a></li>
                 </SimplifiedView>
             </div>
             <div class="col-md-0 col-0">
