more md menu fixes

--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -47,7 +47,7 @@ import "../../public/static/css/course_home_pages.css"
         </ul>
         </CourseCard>
 
-        <CourseCard href="/md/Cams" img_src="/md/home_page/cams.png" title="Cams">
+        <CourseCard href="/md/Cams" img_src="/md/Cams/GIF/Radial Cam gif.gif" title="Cams">
             <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Cam_intro'>Cams  Intro</a>
             <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='/md/Cams#Motion_programing'> Motion Programing</a>
