--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -5,13 +5,15 @@ import SubSection from "../components/SubSection.astro"
 import Image from "../components/Image.astro"
 import SimplifiedView from "../components/course_menus/SimplifiedView.astro"
 import CourseCard from "../components/course_menus/CourseCard.astro"
+import Item from "../components/Item.astro"
+import Itemize from "../components/Itemize.astro"
 
 import "../../public/static/css/course_home_pages.css"
 ---
 
     <Layout title="Mechanism design">
         <div class="mt-sm-4 mt-2 row">
-            <div class="col-md-12 col-12">
+            <div class="col-md-7 col-12">
                 <SimplifiedView id="here" title="Mechanism design" title_style="h1 fw-bold" style="enumerate">
         
         <CourseCard href="/md/Graphical_Linkage_Synthesis" img_src="/md/home_page/gls.png" title="Graphical linkage synthesis">
@@ -105,7 +107,42 @@ import "../../public/static/css/course_home_pages.css"
                     <li slot="list"><a href="/md/Balancing?origin=coursemenu">Balancing</a></li>
                 </SimplifiedView>
             </div>
-            <div class="col-md-0 col-0">
+            <div class="col-md-5 col-12">
+                <p>
+                    Mechanism Design focuses on the process of utilizing mathematical tools and models to analyze and predict the behavior of mechanisms. To do this, this page builds off of a large number of the concepts that are first explored in <a href="/dyn"> Dynamics</a>. Of particular interest are:
+                     </p>
+                  
+                  
+                      <Itemize>
+                        <Item> <a href="/dyn/rigid_body_kinematics"> Rigid Body Kinematics </a> which will be utilized in the analysis of planar mechanism and gears.</Item>
+                        <Item> <a href="/dyn/rigid_body_kinetics"> Rigid Body Kinetics </a> will be useful for the study of <a href="/md/Instant_Centers?origin=coursemenu">Instant Centers</a> (IC), <a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a> (PVA) and <a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis </a> (DFA).</Item>
+                        <Item> <a href="/dyn/work_and_energy"> Work and Energy </a> will be utilized in the study of <a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a>.</Item>
+                      </Itemize>
+                  
+                      <p>
+                        <!--These pages will explore a wide variety of different mechanisms and mechanical components. One of the simplest mechanisms is the "four bar linkage", shown below.-->
+                  
+                        These reference pages will examine a wide range of concepts relating to mechanism design.
+                        <Itemize>
+                          <!--
+                          <Item> Planar Mechanisims will explore different methods of classifying mechanisms, as well as methods for identifying the degrees of freedom (DOF) of a mechanisim</Item>
+                          <Item> Gears will cover the key parts features of a gear, as well as helpful tools for the analysis of gear systems.</Item>
+                          -->
+                  
+                          <Item><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical Linkage Synthesis</a> will explore procedures for creating mechanims that move along user specified paths, or between user specified locations </Item>
+                          <Item><a href="/md/Instant_Centers?origin=coursemenu">Instant Centers</a> examines what an instant center is, how they can be identified, and how instant centers can be used to find force and velocity ratios in mechanisms </Item>
+                          <Item><a href="/md/Cams?origin=coursemenu">Cams</a> focuses on the different classifications of cams, as well as the steps required to design a cam profile according to the fundemental law of cam design </Item>
+                          <Item><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a> demonstrates a method for computing the positon, velocity, and acceleration of a mechanism </Item>
+                          <Item><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis</a> examines a method to compute the forces and torques on each part of a mechanism </Item>
+                          <Item><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a> examines an easier method to compute external forces and torques if the internal forces are unimportant </Item>
+                          <Item><a href="/md/Balancing?origin=coursemenu">Balancing</a> investigates the loads on rotating machinery as well as methods for minimizing them </Item>
+                          <!--
+                          <Item> </Item>
+                          <Item> </Item>
+                          <Item> </Item>
+                          -->
+                        </Itemize>
+                      </p>
             </div>
         </div>    
     </Layout>
