--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -5,6 +5,8 @@ import SubSection from "../components/SubSection.astro"
 import Image from "../components/Image.astro"
 import SimplifiedView from "../components/course_menus/SimplifiedView.astro"
 import CourseCard from "../components/course_menus/CourseCard.astro"
+import Item from "../components/Item.astro"
+import Itemize from "../components/Itemize.astro"
 
 import "../../public/static/css/course_home_pages.css"
 ---
@@ -200,7 +202,23 @@ import "../../public/static/css/course_home_pages.css"
       </ul>
         </CourseCard>
         
-                    <li slot="list"><a href="/sta/pltips?origin=coursemenu">Pltips</a></li><li slot="list"><a href="/sta/cartesian_coordinates?origin=coursemenu">Cartesian coordinates</a></li><li slot="list"><a href="/sta/free_body_diagrams?origin=coursemenu">Free body diagrams</a></li><li slot="list"><a href="/sta/introduction?origin=coursemenu">Introduction</a></li><li slot="list"><a href="/sta/moment_of_inertia?origin=coursemenu">Moment of inertia</a></li><li slot="list"><a href="/sta/reaction_forces?origin=coursemenu">Reaction forces</a></li><li slot="list"><a href="/sta/vectors_scalars?origin=coursemenu">Vectors scalars</a></li><li slot="list"><a href="/sta/virtual_work?origin=coursemenu">Virtual work</a></li><li slot="list"><a href="/sta/moments?origin=coursemenu">Moments</a></li><li slot="list"><a href="/sta/shear_moment_diagrams?origin=coursemenu">Shear moment diagrams</a></li><li slot="list"><a href="/sta/trusses?origin=coursemenu">Trusses</a></li><li slot="list"><a href="/sta/centers_of_mass?origin=coursemenu">Centers of mass</a></li><li slot="list"><a href="/sta/force_systems?origin=coursemenu">Force systems</a></li><li slot="list"><a href="/sta/frames_and_machines?origin=coursemenu">Frames and machines</a></li><li slot="list"><a href="/sta/friction?origin=coursemenu">Friction</a></li><li slot="list"><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic fluid pressure</a></li>
+                    <li slot="list"><a href="/sta/pltips?origin=coursemenu">Pltips</a></li>
+<li slot="list"><a href="/sta/cartesian_coordinates?origin=coursemenu">Cartesian coordinates</a></li>
+<li slot="list"><a href="/sta/free_body_diagrams?origin=coursemenu">Free body diagrams</a></li>
+<li slot="list"><a href="/sta/introduction?origin=coursemenu">Introduction</a></li>
+<li slot="list"><a href="/sta/moment_of_inertia?origin=coursemenu">Moment of inertia</a></li>
+<li slot="list"><a href="/sta/reaction_forces?origin=coursemenu">Reaction forces</a></li>
+<li slot="list"><a href="/sta/vectors_scalars?origin=coursemenu">Vectors scalars</a></li>
+<li slot="list"><a href="/sta/virtual_work?origin=coursemenu">Virtual work</a></li>
+<li slot="list"><a href="/sta/moments?origin=coursemenu">Moments</a></li>
+<li slot="list"><a href="/sta/shear_moment_diagrams?origin=coursemenu">Shear moment diagrams</a></li>
+<li slot="list"><a href="/sta/trusses?origin=coursemenu">Trusses</a></li>
+<li slot="list"><a href="/sta/centers_of_mass?origin=coursemenu">Centers of mass</a></li>
+<li slot="list"><a href="/sta/force_systems?origin=coursemenu">Force systems</a></li>
+<li slot="list"><a href="/sta/frames_and_machines?origin=coursemenu">Frames and machines</a></li>
+<li slot="list"><a href="/sta/friction?origin=coursemenu">Friction</a></li>
+<li slot="list"><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic fluid pressure</a></li>
+
                 </SimplifiedView>
             </div>
             <div class="col-md-0 col-0">
