--- a/src/pages/dyn.astro
+++ b/src/pages/dyn.astro
@@ -5,6 +5,8 @@ import SubSection from "../components/SubSection.astro"
 import Image from "../components/Image.astro"
 import SimplifiedView from "../components/course_menus/SimplifiedView.astro"
 import CourseCard from "../components/course_menus/CourseCard.astro"
+import Item from "../components/Item.astro"
+import Itemize from "../components/Itemize.astro"
 
 import "../../public/static/css/course_home_pages.css"
 ---
@@ -253,7 +255,15 @@ import "../../public/static/css/course_home_pages.css"
   </ul>
         </CourseCard>
         
-                    <li slot="list"><a href="/dyn/particle_kinematics?origin=coursemenu">Particle kinematics</a></li><li slot="list"><a href="/dyn/particle_kinetics?origin=coursemenu">Particle kinetics</a></li><li slot="list"><a href="/dyn/rigid_body_kinematics?origin=coursemenu">Rigid body kinematics</a></li><li slot="list"><a href="/dyn/vector_calculus?origin=coursemenu">Vector calculus</a></li><li slot="list"><a href="/dyn/vectors?origin=coursemenu">Vectors</a></li><li slot="list"><a href="/dyn/work_and_energy?origin=coursemenu">Work and energy</a></li><li slot="list"><a href="/dyn/contact_and_rolling?origin=coursemenu">Contact and rolling</a></li><li slot="list"><a href="/dyn/rigid_body_kinetics?origin=coursemenu">Rigid body kinetics</a></li>
+                    <li slot="list"><a href="/dyn/particle_kinematics?origin=coursemenu">Particle kinematics</a></li>
+<li slot="list"><a href="/dyn/particle_kinetics?origin=coursemenu">Particle kinetics</a></li>
+<li slot="list"><a href="/dyn/rigid_body_kinematics?origin=coursemenu">Rigid body kinematics</a></li>
+<li slot="list"><a href="/dyn/vector_calculus?origin=coursemenu">Vector calculus</a></li>
+<li slot="list"><a href="/dyn/vectors?origin=coursemenu">Vectors</a></li>
+<li slot="list"><a href="/dyn/work_and_energy?origin=coursemenu">Work and energy</a></li>
+<li slot="list"><a href="/dyn/contact_and_rolling?origin=coursemenu">Contact and rolling</a></li>
+<li slot="list"><a href="/dyn/rigid_body_kinetics?origin=coursemenu">Rigid body kinetics</a></li>
+
                 </SimplifiedView>
             </div>
             <div class="col-md-0 col-0">
