Strain tensor cube

--- a/src/pages/sol/strain.astro
+++ b/src/pages/sol/strain.astro
@@ -140,6 +140,12 @@ Dimensionless [mm/mm, in/in, or %]
             </p>
     </CalloutCard>
 </CalloutContainer>
+
+    
+<Image src="/sol/strain/Strain Cube.jpg" width="3"/>
+
+
+
 <p class="mb-0">
     The components of normal and shear strain can be combined into the strain tensor. This is a symmetric matrix.
 </p>
